# adamantite

./: Adamantite.toml  Cargo.toml  LICENSE  README.md  adamantite.py
pkgs/: acl.toml  attr.toml  bash.toml  binutils.toml  bison.toml  bzip2.toml  cmake.toml  coreutils.toml  diffutils.toml  findutils.toml  flex.toml  gawk.toml  gcc.toml  glibc.toml  gmp.toml  grep.toml  gzip.toml  less.toml  libcap.toml  libjpeg-turbo.toml  linux-headers.toml  m4.toml  make.toml  mpc.toml  mpfr.toml  nasm.toml  ncurses.toml  openssl.toml  patch.toml  perl.toml  python.toml  readline.toml  sed.toml  tar.toml  xz.toml  zlib.toml  zstd.toml
src/: builder.rs  fetcher.rs  main.rs
