[package]
name = "adamantite"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7"
serde = {version = "1", features = ["derive"]}
blake2 = "0.10"
reqwest = {version = "0.13", features = ["blocking"]}
hex = "0.4"
